--- a/app/views/trips_runs/_runs_table.html.haml
+++ b/app/views/trips_runs/_runs_table.html.haml
@@ -29,26 +29,9 @@
         %td= format_time_for_listing run.scheduled_end_time
         %td.trips_count= run.trips.count
         %td
+          = link_to new_trip_path(from_dispatch: true, run_id: run.id), style: 'padding-right: 5px;', title: "New Trip" do 
+            %i.fa.fa-plus
           = link_to edit_run_path(run, from_dispatch: true), style: 'padding-right: 5px;', title: 'Edit' do 
             %i.fa.fa-pencil
           = link_to cancel_run_trips_runs_path(run_id: run.id), title: 'Cancel run', remote: true, data: {confirm: 'Are you sure to cancel this run?'} do 
             %i.fa.fa-undo
-
-:javascript
-  $(function() {
-    $(document).on('click', '.run_name_link', function(e) {
-      e.preventDefault();
-      var run_id = $(this).data('run-id');
-      if($("#run_trips_panel_" + run_id).length > 0) {
-        scroll_to_run_trips_panel(run_id);
-        return false;
-      } else {
-        $.ajax({
-          url: "#{run_trips_trips_runs_path}?run_id=" + run_id,
-          success: function() {
-            scroll_to_run_trips_panel(run_id);
-          }
-        });
-      }
-    });
-  });
