--- a/app/views/trips_runs/unschedule.js.erb
+++ b/app/views/trips_runs/unschedule.js.erb
@@ -9,4 +9,5 @@
   <% end %>
 
   $('#unassigned_trips_panel').replaceWith("<%= j render('trips_runs/unassigned_trips_panel') %>");
+  configure_unassigned_trips_table();
 <% end %>
