--- a/app/views/customers/_view_customer_eligibilities.html.haml
+++ b/app/views/customers/_view_customer_eligibilities.html.haml
@@ -16,6 +16,7 @@
     - if eligible_ada_questions.any?
       %fieldset.ada-questions.col-sm-10.pull-right
         - eligible_ada_questions.includes(:ada_question).references(:ada_question).each do |question|
+          - next unless question.ada_question
           .form-group
             .col-sm-9.control-label
               = question.ada_question.name
