tweak expand/collapse icon change

--- a/app/views/trips_runs/index.html.haml
+++ b/app/views/trips_runs/index.html.haml
@@ -58,7 +58,7 @@
   function expand_panel(panel) {
     panel.find('.panel-body').slideDown();
     panel.find('.panel-expand-collapse').removeClass('panel-collapsed');
-    panel.find('.panel-expand-collapse i').removeClass('fa-chevron-up').addClass('fa-chevron-down');
+    panel.find('.panel-expand-collapse i').removeClass('fa-chevron-down').addClass('fa-chevron-up');
   }
 
   function reverse_collapse_panel(panel) {
