--- a/app/views/vehicles/_vehicle.html.haml
+++ b/app/views/vehicles/_vehicle.html.haml
@@ -1,5 +1,6 @@
 %tr{:class => "#{vehicle.active ? 'active' : 'inactive'}"}
-  %td
+  - vehicle_overdue_check = get_vehicle_warnings(vehicle)
+  %td{class: vehicle_overdue_check[:class_name], title: vehicle_overdue_check[:tips] }
     = link_to_if can?(:read, vehicle), vehicle.name, vehicle
   %td
     = vehicle.year
