Display trips info on run panle

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   <%= yield :head %>
 </head>
 <body class="<%= bodytag_class %>">
-  <div class="row col-sm-12">
+  <div>
   <div id="session-timeout-warning" style="display: none;">
     <%= translate_helper("session_timeout_warning") %>
   </div>
