--- a/app/views/trips_runs/_unassigned_trip_type_dropdown.html.haml
+++ b/app/views/trips_runs/_unassigned_trip_type_dropdown.html.haml
@@ -3,14 +3,16 @@
   options[Run::UNSCHEDULED_RUN_ID] = 'Unscheduled'
   options[Run::STANDBY_RUN_ID] = 'Standby'
   options[Run::CAB_RUN_ID] = 'Cab' if current_provider.try(:cab_enabled?)
+  unassigned_trip_status_id = session[:unassigned_trip_status_id].try(:to_i)
 
-%span.dropdown.dispatch-action.unschedule_trip_dropdown{style: 'margin-bottom: 5px;'}
+%span.dropdown.dispatch-action.unassigned_trip_type_dropdown{style: 'margin-bottom: 5px;'}
   %a.dropdown-toggle.non_jump_top{href: '#', type: 'button', style: 'color: white; font-size: small;', data: {toggle: 'dropdown'}} 
-    Change to
-    %i.fa.fa-ellipsis-h
+    = "Showing "
+    %b{style: 'color: pink;'}
+      = options[unassigned_trip_status_id]
     %span.caret
-  %ul.dropdown-menu    
+  %ul.dropdown-menu
     - options.each do |status_id, label|
       %li
-        %a.unschedule_trip.non_jump_top{href: '#', data: {status_id: status_id} }
+        %a.unassigned_trip_type.non_jump_top{href: '#', data: {status_id: status_id} }
           = label
