--- a/app/views/trips_runs/_unassigned_trips_table.html.haml
+++ b/app/views/trips_runs/_unassigned_trips_table.html.haml
@@ -11,30 +11,32 @@
   %thead
     %tr
       %th
+      %th= translate_helper(:unassigned_trips_table_header_type)
       %th= translate_helper(:unassigned_trips_table_header_customer)
       %th= translate_helper(:unassigned_trips_table_header_phone)
       %th= translate_helper(:unassigned_trips_table_header_pickup_time)
       %th= translate_helper(:unassigned_trips_table_header_appointment_time)
       %th= translate_helper(:unassigned_trips_table_header_pickup_address)
       %th= translate_helper(:unassigned_trips_table_header_dropoff_address)
-      %th= translate_helper(:unassigned_trips_table_header_type)
       %th= translate_helper(:unassigned_trips_table_header_riders_count)
       %th= translate_helper(:unassigned_trips_table_header_fare)
+      %th= translate_helper(:unassigned_trips_table_header_comments)
       %th= translate_helper(:unassigned_trips_table_header_actions)
   %tbody
     - trips.each do |trip|
       %tr{data: {trip_id: trip.id}}
         %td
           %input.trip-selected{type: "checkbox"}
+        %td= trip.repeating_trip_id.present? ? translate_helper(:run_trip_type_recurring) : translate_helper(:run_trip_type_daily)
         %td= trip.customer.name
         %td= simple_format [trip.customer.phone_number_1, trip.customer.phone_number_2].compact.join('<br>')
         %td= format_time_for_listing(trip.pickup_time)
         %td= format_time_for_listing(trip.appointment_time) if trip.appointment_time
         %td= trip.pickup_address.try(:one_line_text)
         %td= trip.dropoff_address.try(:one_line_text)
-        %td= trip.repeating_trip_id.present? ? translate_helper(:run_trip_type_recurring) : translate_helper(:run_trip_type_daily)
         %td= trip.trip_size
         %td
+        %td= trip.notes
         %td
           = link_to edit_trip_path(trip, from_dispatch: true), style: 'padding-right: 5px;', title: 'Edit' do 
             %i.fa.fa-pencil
