--- a/app/views/trips_runs/unschedule.js.erb
+++ b/app/views/trips_runs/unschedule.js.erb
@@ -9,6 +9,8 @@
     $('#runs_panel table tbody tr[data-run-id=' + prev_run_id + '] td.trips_count').html(<%= @prev_run.reload.trips.count%>);
   <% end %>
 
-  $('#unassigned_trips_panel').replaceWith("<%= j render('trips_runs/unassigned_trips_panel') %>");
-  configure_unassigned_trips_table();
+  <% if @need_to_update_trips_panel %>
+    $('#unassigned_trips_panel').replaceWith("<%= j render('trips_runs/unassigned_trips_panel') %>");
+    configure_unassigned_trips_table();
+  <% end%>
 <% end %>
