--- a/app/views/trips_runs/_run_manifest_table.html.haml
+++ b/app/views/trips_runs/_run_manifest_table.html.haml
@@ -15,7 +15,7 @@
       %th= translate_helper(:run_manifest_table_header_trip_result)
       %th= translate_helper(:run_manifest_table_header_customer_phone)
       %th= translate_helper(:run_manifest_table_header_driver_notified)
-      %th
+      %th= translate_helper(:run_manifest_table_header_actions)
   %tbody
     - if trips.empty?
       %tr
