--- a/app/views/trips_runs/_runs_panel.html.haml
+++ b/app/views/trips_runs/_runs_panel.html.haml
@@ -1,9 +1,10 @@
 .panel.panel-primary#runs_panel
   .panel-heading
     .pull-right{style: 'padding-right: 0px;'}
-      %span.dispatch-action
-        = link_to new_run_path(from_dispatch: true), style: 'color: white;', title: translate_helper("new_run_link_text") do 
-          %i.fa.fa-plus
+      - if can?(:new, Run)
+        %span.dispatch-action
+          = link_to new_run_path(from_dispatch: true), style: 'color: white;', title: translate_helper("new_run_link_text") do 
+            %i.fa.fa-plus
       %span.panel-close-all-runs.dispatch-action{title: 'Close opened run panels'}
         %i.fa.fa-remove
       %span.panel-expand-collapse.dispatch-action{title: 'Collapse/expand'}
