--- a/app/views/trips_runs/_runs_table.html.haml
+++ b/app/views/trips_runs/_runs_table.html.haml
@@ -16,7 +16,7 @@
       %th= translate_helper(:run_table_header_start)
       %th= translate_helper(:run_table_header_end)
       %th= translate_helper(:run_table_header_trips)
-      %th
+      %th= translate_helper(:run_table_header_actions)
   %tbody
     - @runs.each do |run|
       %tr{data: {run_id: run.id}}
@@ -33,9 +33,12 @@
         %td= format_time_for_listing run.scheduled_end_time
         %td.trips_count= run.trips.count
         %td
-          = link_to new_trip_path(from_dispatch: true, run_id: run.id), style: 'padding-right: 5px;', title: "New Trip" do 
-            %i.fa.fa-plus
-          = link_to edit_run_path(run, from_dispatch: true), style: 'padding-right: 5px;', title: 'Edit' do 
-            %i.fa.fa-pencil
-          = link_to cancel_run_trips_runs_path(run_id: run.id), title: 'Cancel run', remote: true, data: {confirm: 'Are you sure to cancel this run?'} do 
-            %i.fa.fa-undo
+          - if can?(:new, Trip)
+            = link_to new_trip_path(from_dispatch: true, run_id: run.id), style: 'padding-right: 5px;', title: "New Trip" do 
+              %i.fa.fa-plus
+          - if can?(:edit, run)
+            = link_to edit_run_path(run, from_dispatch: true), style: 'padding-right: 5px;', title: 'Edit' do 
+              %i.fa.fa-pencil
+          - if can?(:cancel, run)
+            = link_to cancel_run_trips_runs_path(run_id: run.id), title: 'Cancel run', remote: true, data: {confirm: 'Are you sure to cancel this run?'} do 
+              %i.fa.fa-undo
