--- a/app/views/trips_runs/_unassigned_trips_panel.html.haml
+++ b/app/views/trips_runs/_unassigned_trips_panel.html.haml
@@ -11,9 +11,11 @@
   .panel-heading
     .pull-right{style: 'padding-right: 0px;'}
       = render 'unassigned_trip_type_dropdown'
-      %span.dispatch-action
-        = link_to new_trip_path(from_dispatch: true), style: 'color: white;', title: translate_helper("new_trip_link_text") do 
-          %i.fa.fa-plus
+      = render 'unassigned_trips_schedule_dropdown'
+      - if can?(:new, Trip)
+        %span.dispatch-action
+          = link_to new_trip_path(from_dispatch: true), style: 'color: white;', title: translate_helper("new_trip_link_text") do 
+            %i.fa.fa-plus
       %span.panel-expand-collapse-reverse.dispatch-action
         %i.fa.fa-chevron-down
     %h3.panel-title.text-center
