--- a/app/views/trips_runs/_unassigned_trips_schedule_dropdown.html.haml
+++ b/app/views/trips_runs/_unassigned_trips_schedule_dropdown.html.haml
@@ -1,6 +1,6 @@
 %span.dropdown.dispatch-action.schedule_trip_dropdown{style: 'margin-bottom: 5px;'}
   %a.dropdown-toggle.non_jump_top{href: '#', type: 'button', style: 'color: white; font-size: small;', data: {toggle: 'dropdown'}} 
-    Change to
+    Assign to
     %i.fa.fa-ellipsis-h
     %span.caret
   %ul.dropdown-menu{style: 'max-height: 200px; overflow-y: auto;'}    
