--- a/app/views/trips_runs/index.html.haml
+++ b/app/views/trips_runs/index.html.haml
@@ -12,6 +12,8 @@
 .col-sm-12#unassigned_trips_container
   = render 'unassigned_trips_panel'
 
+= render 'trips/trip_result_reason_dialog'
+
 :javascript
   var run_ids = #{@runs.pluck(:id) || []};
   var target_run_id = #{params[:run_id] || false} || null;
@@ -186,6 +188,60 @@
 
   // page main entry point
   $(function() {  
+    // Initialize a helper object with the trip result reason modal, and a list of cancellation codes.
+    var trh = new TripResultHelper(
+      "#tripResultReasonDialog",
+      #{TripResult.reason_needed_result_ids}
+    );
+
+    // Handler for changing multiple selected trip results
+      $(document).on('click', '.trip_result_option', function() {
+        var trip_ids = [];
+        $(this).parents('.panel').find('input:checked').each(function() {
+          trip_ids.push($(this).parents('tr').data('trip-id'));
+        });
+
+        if(trip_ids.length == 0) {
+          bootbox.alert('Please select trips first.');
+          return;
+        }
+
+        var resultCode = $(this).data('trip-result-id');
+
+        if(trh.isReasonNeeded(resultCode)) { // If result is a code that needs to ask for reason...
+          trh.prepareModal(
+            "", // Set result reason input to blank
+            true, // Show result reason input
+            { // Prepare modal responses:
+              confirm: function() { // update the results and result reason and submit form
+                console.log('TODO: submit with cancellation code');
+              },
+              skip: function() { // just update results and submit the form
+                console.log('TODO: submit without comment');
+              },
+              cancel: function() { // don't update results or submit form
+                return;
+              }
+            }
+          )
+        } else { // If result is NOT a cancel code...
+          trh.prepareModal(
+            "", // Set result reason input to blank
+            false, // Don't show result reason input
+            { // Prepare modal responses:
+              confirm: function() {
+                console.log('TODO: submit with non-cancellation code');
+              },
+              cancel: function() {
+                return;
+              }
+            }
+          )
+        }
+
+        trh.showModal();
+        
+      });
 
     // run manifest panel expand/collapse
     $(document).on('click', '.panel-heading span.panel-expand-collapse', function(e){
